# voice-agent

./: .env  .env.example  .gitignore  ARCHITECTURE.md  FLUTTER_SETUP.md  README.md  README_UPDATED.md  entrypoint.sh  example_async_callbacks.py  flutter_livekit_service.dart  flutter_usage_example.dart  health.py  main.py  pyproject.toml  requirements.txt  test_flutter_connection.py  test_user_metadata.py  worker.py
app/: config.py  security.py  state.py
app/agents/: __init__.py  auth_agent.py  base_agent.py  basic_agent.py  greeting_agent.py  helpline_agent.py  main_agent.py  multi_agent.py  multi_agent_new.py  query_agent.py  user_agent.py
gocare/: __init__.py  manager.py  mcp.py  security.py  state.py
gocare/agents/: __init__.py  base.py  greeting_agent.py  helpline_agent.py  main_agent.py  multi_agent.py  unauthorized_agent.py  user_agent.py
mcp_server/: Dockerfile  app.py  requirements.txt  user_data.csv
web/: index.html  package.json
web/src/: main.tsx
