[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.9",
    "uvicorn>=0.35.0",
    "httpx>=0.27.0",
    "livekit-agents[deepgram,mcp,openai,silero,turn-detector]~=1.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "loguru>=0.7.2",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "uvloop>=0.19.0",
]
